--- a/package.json
+++ b/package.json
@@ -3,18 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "4.10.2",
+    "@material-ui/icons": "4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^12.12.47",
-    "@types/react": "^16.9.36",
-    "@types/react-dom": "^16.9.8",
-    "@material-ui/core": "4.10.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "@types/jest": "24.9.1",
+    "@types/node": "12.12.47",
+    "@types/prop-types": "15.5.4",
+    "@types/react": "16.9.36",
+    "@types/react-dom": "16.9.8",
+    "@types/react-redux": "6.0.5",
+    "@types/react-router-dom": "4.2.1",
+    "@types/redux": "3.6.0",
+    "echarts-for-react": "^2.0.16",
+    "prop-types": "15.6.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-redux": "7.2.0",
+    "react-router-dom": "4.2.2",
     "react-scripts": "3.4.1",
-    "typescript": "^3.7.5"
+    "redux": "4.0.0",
+    "redux-thunk": "2.3.0",
+    "typescript": "3.7.5"
   },
   "scripts": {
     "start": "react-scripts start",
