--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "4.10.2",
     "@material-ui/icons": "4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -16,6 +17,7 @@
     "@types/react-redux": "6.0.5",
     "@types/react-router-dom": "4.2.1",
     "@types/redux": "3.6.0",
+    "axios": "^0.19.2",
     "echarts-for-react": "^2.0.16",
     "prop-types": "15.6.2",
     "react": "16.13.1",
@@ -23,10 +25,11 @@
     "react-redux": "7.2.0",
     "react-router-dom": "4.2.2",
     "react-scripts": "3.4.1",
-    "redux": "4.0.0",
+    "redux": "^4.0.4",
     "redux-thunk": "2.3.0",
     "typescript": "3.7.5"
   },
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
