--- a/package.json
+++ b/package.json
@@ -3,41 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.10.2",
-    "@material-ui/icons": "4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
+    "axios": "1.12.0",
+    "echarts-for-react": "^2.0.16",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^7.9.1",
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.19"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "24.9.1",
-    "@types/node": "12.12.47",
-    "@types/prop-types": "15.5.4",
-    "@types/react": "16.9.36",
-    "@types/react-dom": "16.9.8",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "@types/react-redux": "6.0.5",
     "@types/react-router-dom": "4.2.1",
     "@types/redux": "3.6.0",
-    "axios": "^0.19.2",
-    "echarts-for-react": "^2.0.16",
-    "prop-types": "15.6.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
-    "react-router-dom": "4.2.2",
-    "react-scripts": "3.4.1",
-    "redux": "^4.0.4",
-    "redux-thunk": "2.3.0",
-    "typescript": "3.7.5"
+    "@types/styled-components": "^5.1.34",
+    "@vitejs/plugin-react": "^4.6.0",
+    "eslint": "^9.30.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "json-server": "^0.17.4",
+    "sass": "^1.89.2",
+    "typescript": "~5.8.3",
+    "typescript-eslint": "^8.35.1",
+    "vite": "7.1.5"
   },
   "proxy": "http://localhost:8080",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "browserslist": {
     "production": [
